--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "v16.3.0",
+    "npm": "7.15.1"
   }
 }
+
