--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bindings": "1.5.0",
     "bluebird": "3.7.2",
     "dot-prop": "5.3.0",
+    "express": "^4.17.3",
     "has-ansi": "2.0.0",
     "is-core-module": "2.8.1",
     "json-parse-even-better-errors": "2.3.1",
@@ -38,7 +39,8 @@
     "yaml": "1.10.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "start:local": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
